--- a/src/html.html
+++ b/src/html.html
@@ -5,8 +5,14 @@
 
 <!-- 短信 -->
 <a href="sms:10086">给 10086 发短信</a>
+
+<!-- android -->
 <a href="sms:10086?body=cxye">给 10086 发送内容为"cxye"的短信</a>
 <a href="sms:10086,10010?body=cxye">给 10086 和 10010 发送内容为"cxye"的短信</a>
+
+<!-- iphone -->
+<a href="sms:10086&body=cxye">给 10086 发送内容为"cxye"的短信</a>
+<a href="sms:10086,10010&body=cxye">给 10086 和 10010 发送内容为"cxye"的短信</a>
 
 <!-- 邮件 -->
 <a href="mailto:test1@163.com">mail</a> 
